...
<resources>
    <string name="action_settings">Settings</string>
    <string name="credits_email_chooser_header">Send e-mail…</string>
    <string name="credits_hase_position">Developer</string>
    <string name="error_invalid_link">Invalid link.</string>
    <string name="error_no_app_to_share">No app to share was found.</string>
    <string name="main_toolbar_expanded_title">Passos\ndo Impeachment</string>
    <string name="main_toolbar_shrunk_title">Passos do Impeachment</string>
    <string name="main_toolbar_tablet_title">Passos do Impeachment</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_credits">Credits</string>
    <string name="nav_drawer_feedback">Feedback</string>
    <string name="nav_drawer_news_list">News</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_opensource">Opensource</string>
    <string name="nav_drawer_step_list">Steps</string>
    <string name="nav_drawer_sync_title">Last update</string>
    <string name="nav_drawer_title">Passos do Impeachment</string>
    <string name="news_item_access_button">Open</string>
    <string name="news_item_share_button">Share</string>
    <string name="news_toolbar_shrunk_title">Impeachment News</string>
    <string name="news_toolbar_tablet_title">News</string>
...
