...
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_item_step_number_incomplete">

            <TextView
                android:id="@+id/view_position_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#c5ffffff"
                android:textSize="22sp"/>
        </FrameLayout>
...
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/step_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-regular"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
...
