<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_news_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>

